--- a/peces/bermejuela.html
+++ b/peces/bermejuela.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Todo sobre la Bermejuela (Achondrostoma arcasii), especie autóctona del río Ebro: morfología, distribución, alimentación y estado de conservación.">
   <meta name="keywords" content="bermejuela, Achondrostoma arcasii, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, peces pequeños Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/bermejuela.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/bermejuela.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/bermejuela.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/bermejuela.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Bermejuela (Achondrostoma arcasii) | Ficha completa | ebropeces">
   <meta property="og:description" content="Ficha técnica de la Bermejuela: hábitat, comportamiento, ecología y su situación en el río Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/bermejuela.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/bermejuela.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Bermejuela | Pez autóctono del Ebro | ebropeces">
