--- a/peces/black-bass.html
+++ b/peces/black-bass.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Todo sobre el Black bass (Micropterus salmoides), especie invasora del río Ebro: identificación, comportamiento, hábitat y efectos sobre el ecosistema.">
   <meta name="keywords" content="black bass, Micropterus salmoides, pez depredador Ebro, especie invasora Ebro, pesca deportiva Ebro, peces río Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/black-bass.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/black-bass.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/black-bass.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/black-bass.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Black bass (Micropterus salmoides) | Ficha completa | ebropeces">
   <meta property="og:description" content="Ficha técnica del Black bass: morfología, hábitat, dieta y su impacto como especie invasora en el Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/black-bass.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/black-bass.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Black bass | Especie invasora del Ebro | ebropeces">
