--- a/peces/carpa-comun.html
+++ b/peces/carpa-comun.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Descubre todo sobre la Carpa común (Cyprinus carpio), especie invasora del río Ebro: origen, características, hábitat y su impacto ecológico.">
   <meta name="keywords" content="carpa común, Cyprinus carpio, especie invasora Ebro, peces Ebro, peces río Ebro, carpas España, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/carpa-comun.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/carpa-comun.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/carpa-comun.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/carpa-comun.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Carpa común (Cyprinus carpio) | Ficha completa | ebropeces">
   <meta property="og:description" content="Ficha técnica de la Carpa común: morfología, alimentación, reproducción y su efecto como especie invasora en el Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/carpa-comun.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/carpa-comun.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Carpa común | Especie invasora del Ebro | ebropeces">
