--- a/peces/carpin.html
+++ b/peces/carpin.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha completa del Carpín (Squalius pyrenaicus), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento.">
   <meta name="keywords" content="carpín, Squalius pyrenaicus, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/carpin.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/carpin.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/carpin.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/carpin.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Carpín (Squalius pyrenaicus) | Ficha completa | ebropeces">
   <meta property="og:description" content="Información detallada del Carpín: distribución, ecología y hábitos en el río Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/carpin.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/carpin.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Carpín | Pez autóctono del Ebro | ebropeces">
