--- a/peces/colmilleja.html
+++ b/peces/colmilleja.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha completa de la Colmilleja (Cobitis paludica), pez autóctono del río Ebro: morfología, hábitat, alimentación y comportamiento.">
   <meta name="keywords" content="colmilleja, Cobitis paludica, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, peces bentónicos Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/colmilleja.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/colmilleja.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/colmilleja.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/colmilleja.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Colmilleja (Cobitis paludica) | Ficha completa | ebropeces">
   <meta property="og:description" content="Información detallada sobre la Colmilleja: distribución, comportamiento y ecología en el río Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/colmilleja.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/colmilleja.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Colmilleja | Pez autóctono del Ebro | ebropeces">
