--- a/peces/esturion-danubio.html
+++ b/peces/esturion-danubio.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Información sobre el Esturión del Danubio (Huso huso), una especie histórica en el río Ebro: características, hábitat y estado actual.">
   <meta name="keywords" content="esturión del Danubio, Huso huso, pez histórico Ebro, especies en peligro Ebro, fauna acuática Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/esturion-danubio.html">
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/esturion-danubio.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/esturion-danubio.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/esturion-danubio.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
   <meta property="og:title" content="Esturión del Danubio (Huso huso) | Ficha completa | ebropeces">
   <meta property="og:description" content="Ficha técnica del Esturión del Danubio: hábitat, características y situación actual en el río Ebro.">
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/esturion-danubio.html">
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/esturion-danubio.html">
   <meta property="og:site_name" content="ebropeces">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Esturión del Danubio | Especie histórica del Ebro | ebropeces">
