--- a/peces/fraile-cacho.html
+++ b/peces/fraile-cacho.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Conoce al Fraile cacho (Leuciscus pyrenaicus), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento.">
   <meta name="keywords" content="fraile cacho, Leuciscus pyrenaicus, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces">
   <meta name="author" content="mgb42x">
-  <link rel="canonical" href="https://ebropeces.netlify.app//peces/fraile-cacho.html">
-  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app//peces/fraile-cacho.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/fraile-cacho.html">
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/fraile-cacho.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css">
   <meta property="og:type" content="article">
