--- a/peces/gobio.html
+++ b/peces/gobio.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha detallada del Gobio (Gobio gobio), pez autóctono del río Ebro: características, hábitat, alimentación y comportamiento." />
   <meta name="keywords" content="gobio, Gobio gobio, pez autóctono Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
   <meta name="author" content="mgb42x" />
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/gobio.html" />
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/gobio.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/gobio.html" />
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/gobio.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../styles.css" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Gobio (Gobio gobio) | Ficha completa | ebropeces" />
   <meta property="og:description" content="Información detallada del Gobio: distribución, ecología y hábitos en el río Ebro." />
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/gobio.html" />
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/gobio.html" />
   <meta property="og:site_name" content="ebropeces" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Gobio | Pez autóctono del Ebro | ebropeces" />
