--- a/peces/lucio-perca.html
+++ b/peces/lucio-perca.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha del Lucio perca, híbrido entre Lucio y Perca fluviatilis, presente en el río Ebro: características, hábitat y comportamiento." />
   <meta name="keywords" content="lucio perca, híbrido lucio perca, Esox lucius x Perca fluviatilis, peces río Ebro, fauna acuática Ebro, ebropeces" />
   <meta name="author" content="mgb42x" />
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/lucio-perca.html" />
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/lucio-perca.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/lucio-perca.html" />
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/lucio-perca.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../styles.css" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Lucio perca (Esox lucius x Perca fluviatilis) | Ficha completa | ebropeces" />
   <meta property="og:description" content="Información detallada del Lucio perca, pez híbrido presente en el río Ebro: ecología y comportamiento." />
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/lucio-perca.html" />
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/lucio-perca.html" />
   <meta property="og:site_name" content="ebropeces" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Lucio perca | Pez híbrido del Ebro | ebropeces" />
