--- a/peces/lucio.html
+++ b/peces/lucio.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha del Lucio (Esox lucius), pez depredador del río Ebro: características, hábitat, alimentación y comportamiento." />
   <meta name="keywords" content="lucio, Esox lucius, pez depredador Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
   <meta name="author" content="mgb42x" />
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/lucio.html" />
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/lucio.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/lucio.html" />
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/lucio.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../styles.css" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Lucio (Esox lucius) | Ficha completa | ebropeces" />
   <meta property="og:description" content="Información detallada del Lucio: distribución, ecología y hábitos en el río Ebro." />
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/lucio.html" />
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/lucio.html" />
   <meta property="og:site_name" content="ebropeces" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Lucio | Pez depredador del Ebro | ebropeces" />
