--- a/peces/perca-fluviatilis.html
+++ b/peces/perca-fluviatilis.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha completa de la Perca fluviatilis, pez común en el río Ebro: características, hábitat, alimentación y comportamiento." />
   <meta name="keywords" content="perca fluviatilis, pez común Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
   <meta name="author" content="mgb42x" />
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/perca-fluviatilis.html" />
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/perca-fluviatilis.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/perca-fluviatilis.html" />
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/perca-fluviatilis.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../styles.css" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Perca fluviatilis | Ficha completa | ebropeces" />
   <meta property="og:description" content="Información detallada de la Perca fluviatilis: distribución, ecología y hábitos en el río Ebro." />
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/perca-fluviatilis.html" />
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/perca-fluviatilis.html" />
   <meta property="og:site_name" content="ebropeces" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Perca fluviatilis | Pez común del río Ebro | ebropeces" />
