--- a/peces/siluro.html
+++ b/peces/siluro.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha completa del Siluro (Silurus glanis), pez gigante del río Ebro: características, hábitat, alimentación y comportamiento." />
   <meta name="keywords" content="siluro, Silurus glanis, pez gigante Ebro, peces río Ebro, fauna acuática Ebro, ebropeces" />
   <meta name="author" content="mgb42x" />
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/siluro.html" />
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/siluro.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/siluro.html" />
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/siluro.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../styles.css" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Siluro (Silurus glanis) | Ficha completa | ebropeces" />
   <meta property="og:description" content="Información detallada del Siluro: distribución, ecología y hábitos en el río Ebro." />
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/siluro.html" />
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/siluro.html" />
   <meta property="og:site_name" content="ebropeces" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Siluro | Pez gigante del río Ebro | ebropeces" />
