--- a/peces/trucha-comun.html
+++ b/peces/trucha-comun.html
@@ -7,14 +7,14 @@
   <meta name="description" content="Ficha completa de la Trucha común (Salmo trutta), pez emblemático del río Ebro: características, hábitat, alimentación y comportamiento." />
   <meta name="keywords" content="trucha común, Salmo trutta, pez río Ebro, peces autóctonos Ebro, fauna acuática Ebro, ebropeces" />
   <meta name="author" content="mgb42x" />
-  <link rel="canonical" href="https://mgb42x.github.io/ebropeces/peces/trucha-comun.html" />
-  <link rel="alternate" hreflang="es" href="https://mgb42x.github.io/ebropeces/peces/trucha-comun.html" />
+  <link rel="canonical" href="https://ebropeces.netlify.app/peces/trucha-comun.html" />
+  <link rel="alternate" hreflang="es" href="https://ebropeces.netlify.app/peces/trucha-comun.html" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;400&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="../styles.css" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Trucha común (Salmo trutta) | Ficha completa | ebropeces" />
   <meta property="og:description" content="Información detallada de la Trucha común: distribución, ecología y hábitos en el río Ebro." />
-  <meta property="og:url" content="https://mgb42x.github.io/ebropeces/peces/trucha-comun.html" />
+  <meta property="og:url" content="https://ebropeces.netlify.app/peces/trucha-comun.html" />
   <meta property="og:site_name" content="ebropeces" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Trucha común | Pez emblemático del río Ebro | ebropeces" />
